@@ -254,17 +254,16 @@ CGUISettings::CGUISettings(void)
 	AddBool(7,"Autorun.Pictures", 246, true);
 
 	AddCategory(4, "Cache", 439);
-	AddInt(1,"CacheVideo.HardDisk", 14025, 1024, 256, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
-	AddInt(2,"CacheVideo.DVDRom", 14026, 8192, 256, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
-	AddInt(3,"CacheVideo.LAN", 14027, 8192, 256, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
-	AddInt(4,"CacheVideo.Internet", 14028, 2048, 256, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
-	AddInt(5,"CacheAudio.HardDisk", 14029, 256, 256, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
-	AddInt(6,"CacheAudio.DVDRom", 14030, 256, 256, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
-	AddInt(7,"CacheAudio.LAN", 14031, 256, 256, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
-	AddInt(8,"CacheAudio.Internet", 14032, 256, 256, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
-	AddInt(9,"CacheDVD.HardDisk", 14033, 16384, 256, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
-	AddInt(10,"CacheDVD.DVDRom", 14034, 16384, 256, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
-	AddInt(11,"CacheDVD.LAN", 14035, 16384, 256, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
+	AddInt(1,"Cache.HardDisk",         14025,   256, 0, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
+	AddInt(2,"CacheVideo.DVDRom",      14026,  8192, 0, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
+	AddInt(3,"CacheVideo.LAN",         14027,  8192, 0, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
+	AddInt(4,"CacheVideo.Internet",    14028,  2048, 0, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
+	AddInt(5,"CacheAudio.DVDRom",      14030,   256, 0, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
+	AddInt(6,"CacheAudio.LAN",         14031,   256, 0, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
+	AddInt(7,"CacheAudio.Internet",    14032,   256, 0, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
+	AddInt(8,"CacheDVD.DVDRom",        14034, 16384, 0, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
+	AddInt(9,"CacheDVD.LAN",           14035, 16384, 0, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
+	AddInt(10,"CacheUnknown.Internet", 14060,  4096, 0, 256, 16384, SPIN_CONTROL_INT_PLUS, MASK_KB);
 
 	AddCategory(4, "LED", 13338);
 	AddInt(1, "LED.Colour", 13339, LED_COLOUR_NO_CHANGE, LED_COLOUR_NO_CHANGE, 1, LED_COLOUR_OFF, SPIN_CONTROL_TEXT);
