@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 26-01-2005 changed: Merged audio/video/dvd cachesize settings for harddisk to 1 setting.
+               Added cachesize setting for unknown types on the internet (url's without a known audio or video extension).
+               Allow cache sizes of 0.
   - 26-01-2005 fixed: ID3 tags with UTF16 fields show strange characters
   - 26-01-2005 updated: Polish language file (Thnx to napek)
   - 26-01-2005 updated: German (Austrian) language file (Thnx to CEOMR)
